Fixed navbar padding issue on mobile

--- a/EventApp/static/base/css/base.css
+++ b/EventApp/static/base/css/base.css
@@ -70,6 +70,9 @@ nav li .active a {
         background-color: #004E8A !important;
     }
 
+    .nav.navbar-nav li a {
+        padding-left: 10px;
+    }
 }
 
 /*************************
